
add_executable(test_overload_operator test_overload_operator.cpp)
target_include_directories(test_overload_operator PRIVATE ${CMAKE_SOURCE_DIR}/overload_operator)
# target_link_directories(test_overload_operator PRIVATE ${CMAKE_BINARY_DIR}/overload_operator)
target_link_libraries(test_overload_operator ops)
